--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,3 @@
----
-name: Neat Starter
-author: Surjith S M
-url: "https://surjithctly.in/"
+name: Libreta de Viaje
+author: Mi Ros
+url: https://diary4travelling.wordpress.com/
