--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,10 +1,9 @@
----
 items:
-  - text: Menu One
-    url: "#"
-  - text: Menu Two
-    url: "#"
-  - text: Menu Three
-    url: "#"
+  - text: Destinos
+    url: /destinos
+  - text: Guias
+    url: /guias
+  - text: Experiencias
+    url: /experiencias
   - text: Blog
-    url: "/blog"
+    url: /blog
