Update Settings “items”

--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -7,3 +7,7 @@ items:
     url: /experiencias
   - text: Blog
     url: /blog
+  - text: Sobre Mi
+    url: /sobremi
+  - text: Contacto
+    url: /contacto
