fix-responsive-style

--- a/src/_data/paises.yaml
+++ b/src/_data/paises.yaml
@@ -7,7 +7,7 @@ items:
     url: /articles
   - text: España
     url: /articles
-  - text: Estados Unidos
+  - text: USA
     url: /articles
   - text: Francia
     url: /articles
