fix center images in blog post

--- a/src/_data/navigation_left.yaml
+++ b/src/_data/navigation_left.yaml
@@ -5,7 +5,7 @@ items:
     url: /guias
   - text: EXPERIENCIAS
     url: /experiencias
-  - text: SOBRE MI
-    url: /sobremi
+  - text: SOBRE NOS
+    url: /sobrenos
 
 
